// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`URLField should match the previous snapshot 1`] = `
<div
  className="form-group"
>
  <div
    className="row"
  >
    <div
      className="col-sm-2"
    >
      <label
        className="control-label"
        htmlFor="url"
      >
        URL
      </label>
    </div>
    <div
      className="col-sm-10"
    >
      <input
        autoFocus={true}
        className="form-control"
        id="url"
        placeholder="https://example.com"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`URLField should match the previous snapshot with invalid field state 1`] = `
<div
  className="form-group has-error"
>
  <div
    className="row"
  >
    <div
      className="col-sm-2"
    >
      <label
        className="control-label"
        htmlFor="url"
      >
        URL
      </label>
    </div>
    <div
      className="col-sm-10"
    >
      <input
        autoFocus={true}
        className="form-control"
        id="url"
        placeholder="https://example.com"
        type="text"
      />
    </div>
  </div>
</div>
`;
